[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the vl53l0x (time-to-flight sensor)"
documentation = "https://docs.rs/lsm303c"
keywords = ["embedded-hal-driver", "range", "time-fo-flight", "distance"]
license = "MIT"
name = "vl53l0x"
repository = "https://github.com/copterust/vl53l0x"
version = "1.1.0"
edition = "2018"

[dependencies]
nb = "1.1.0"
embedded-hal = "1.0.0"
embassy-sync = { path = "../embassy/embassy-sync" }
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "1.0.1", optional = true }

[features]
default = []
async-hal = ["dep:embedded-hal-async"]
defmt = [
    "dep:defmt",
    "embedded-hal-async/defmt-03",
]
